* Fixed problem in copy-based speculative analysis (when dealing with meta-model references in Problem classes) * Added tooltips to the repair graph * Added some documentation to quick fixes

--- a/plugins/anatlyzer.atl.editor.quickfix.visualization/plugin.xml
+++ b/plugins/anatlyzer.atl.editor.quickfix.visualization/plugin.xml
@@ -45,7 +45,7 @@
             class="anatlyzer.atl.editor.quickfix.visualization.RepairTransformationView"
             icon="icons/autofix_16x16.png"
             id="anatlyzer.atl.editor.quickfix.visualization.RepairTransformationView"
-            name="Elements Connections View">
+            name="ATL Repair View">
       </view>
    	</extension>
 </plugin>
