* Integrated cardinality fix of transML for string attributes * Fixed a few problems with operators

--- a/tests/anatlyzer.atl.tests.unit/src/anatlyzer/atl/operators/.gitignore
+++ b/tests/anatlyzer.atl.tests.unit/src/anatlyzer/atl/operators/.gitignore
@@ -8,3 +8,7 @@
 /test_integer_logical_success.asm
 /test_integer_logical_fail.asm
 /test_float_logical_fail.asm
+/test_undefined.asm
+/test_undefined_success.asm
+/test_strint_logical_fail.asm
+/test_string_logical_fail.asm
