* Added flag to quickfixes to indicate if it will use a dialog to ask the user for additional information * Some fixes

--- a/plugins/anatlyzer.experiments.typing/plugin.xml
+++ b/plugins/anatlyzer.experiments.typing/plugin.xml
@@ -56,4 +56,14 @@
       </experiment>
    </extension>
 
+   <extension
+         id="typing.experiment.old.quickfixEvaluationByMutation"
+         point="anatlyzer.experiments.newExperiment">
+      <experiment
+            delegate="anatlyzer.experiments.typing.old.OldQuickfixEvaluationByMutation"
+            resourceType="file:atl">
+      </experiment>
+   </extension>
+
+
 </plugin>
