Added new quick fix for thinks like aCollection.featureAccess => aCollection->first().featureAccess

--- a/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
+++ b/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
@@ -214,6 +214,13 @@
       </quickfixset>
    </extension>
    
+   <extension
+         point="anatlyzer.atl.editor.quickfix">
+      <quickfix
+            apply="anatlyzer.atl.editor.quickfix.errors.FeatureAccessInCollection_SelectFirst">
+      </quickfix>
+   </extension>
+   
    <!-- Constraint solving and slicing -->
    <!--
    <extension
