* Added facility to export a table with errors / quickfixes in the evaluation * Added most-general precondition quickfix to binding resolved with invalid target

--- a/plugins/anatlyzer.experiments.typing/plugin.xml
+++ b/plugins/anatlyzer.experiments.typing/plugin.xml
@@ -53,6 +53,10 @@
       <experiment
             delegate="anatlyzer.experiments.typing.QuickfixEvaluationByMutation"
             resourceType="file:atl">
+         <actions
+               implementation="anatlyzer.experiments.typing.ExportQuickfixesDetail"
+               name="Export detail">
+         </actions>
       </experiment>
    </extension>
 
