--- a/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
+++ b/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
@@ -152,6 +152,12 @@
       </quickfixset>
    </extension>
    <extension
+         point="anatlyzer.atl.editor.quickfix">
+      <quickfixset
+            detector="anatlyzer.atl.editor.quickfix.kinds.FeatureFoundInSubtypeQuickfixSet">
+      </quickfixset>
+   </extension>   
+   <extension
          id="anatlyzer.atl.editor.quickfix.errors.BindingPossiblyUnresolvedQuickSet"
          name="Quickfixes for &quot;Binding possibly unresolved&quot;"
          point="anatlyzer.atl.editor.quickfix">
