* Added a tab to the speculative quick fix dialog know the codes for quickes and errors

--- a/plugins/anatlyzer.experiments.typing/plugin.xml
+++ b/plugins/anatlyzer.experiments.typing/plugin.xml
@@ -69,5 +69,11 @@
       </experiment>
    </extension>
 
-
+   <extension
+         point="anatlyzer.atl.quickfix.impact">
+      <impact
+            implementation="anatlyzer.experiments.quickfix.ShowErrorCodes"
+            name="Error Codes">
+      </impact>
+   </extension>
 </plugin>
