Some classes needed for quick fix performance evaluation

--- a/experiments/anatlyzer.experiments.performance/plugin.xml
+++ b/experiments/anatlyzer.experiments.performance/plugin.xml
@@ -11,4 +11,13 @@
       </experiment>
    </extension>
 
+   <extension
+         id="typing.experiment.measureQuickfixPerformance"
+         point="anatlyzer.experiments.newExperiment">
+      <experiment
+            delegate="anatlyzer.experiments.performance.MeasureQuickfixPerformance"
+            resourceType="file:atl">
+      </experiment>
+   </extension>
+
 </plugin>
