--- a/plugins/anatlyzer.use.witness/.classpath
+++ b/plugins/anatlyzer.use.witness/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry exported="true" kind="lib" path="lib/dist/transml_use_complete.jar" sourcepath="/transML"/>
+	<classpathentry exported="true" kind="lib" path="lib/dist/transml_use_complete.jar" sourcepath="/home/jesus/thirdparty/transML/transML"/>
 	<classpathentry exported="true" kind="lib" path="lib/plantuml.jar"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
