--- a/plugins/anatlyzer.experiments.typing/.classpath
+++ b/plugins/anatlyzer.experiments.typing/.classpath
@@ -4,5 +4,9 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="lib/simple-xml-2.7.1/simple-xml-2.7.1.jar"/>
+	<classpathentry kind="lib" path="lib/simple-xml-2.7.1/stax-1.2.0.jar"/>
+	<classpathentry kind="lib" path="lib/simple-xml-2.7.1/stax-api-1.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/simple-xml-2.7.1/xpp3-1.1.3_8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
