Considered three generation strategies for witness models: error path, mandatory effective metamodel and mandatory full metamodel Simple facility to export experimental data to Elm format

--- a/plugins/anatlyzer.experiments.typing/plugin.xml
+++ b/plugins/anatlyzer.experiments.typing/plugin.xml
@@ -40,6 +40,12 @@
       <experiment
             delegate="anatlyzer.experiments.typing.AnalyseTypeErrors"
             resourceType="file:atl">
+
+         <actions
+               implementation="anatlyzer.experiments.typing.export.ExportToElm"
+               name="Export to Elm format">
+         </actions>
+
       </experiment>
    </extension>
 
