--- a/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
+++ b/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
@@ -317,6 +317,12 @@
           name="Text">
     </impact>
  </extension>
+ <extension
+       point="anatlyzer.atl.editor.quickfix">
+    <quickfix
+          apply="anatlyzer.atl.editor.quickfix.errors.CannotInstantiateAbstractClass_ChooseConcrete">
+    </quickfix>
+ </extension>
    	
    
 </plugin>
