Added quick assist facility, enabled with CTRL+1

--- a/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
+++ b/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
@@ -323,6 +323,14 @@
           apply="anatlyzer.atl.editor.quickfix.errors.CannotInstantiateAbstractClass_ChooseConcrete">
     </quickfix>
  </extension>
+ <extension
+       id="anatlyzer.atl.editor.quickassist.RuleRefactoringSet"
+       name="Quick assists for rule refactorings"
+       point="anatlyzer.atl.editor.quickassist">
+    <quickassistset
+          detector="anatlyzer.atl.editor.quickassist.kinds.RuleRefactoringsSet">
+    </quickassistset>
+ </extension>
    	
    
 </plugin>
