Initial support for detailed explanations of problems

--- a/plugins/anatlyzer.atl.editor/plugin.xml
+++ b/plugins/anatlyzer.atl.editor/plugin.xml
@@ -3,6 +3,7 @@
 <plugin>
    <extension-point id="anatlyzer.atl.editor.quickfix" name="anATLyzer QuickFix" schema="schema/anatlyzer.atl.editor.quickfix.exsd"/>
    <extension-point id="anatlyzer.atl.editor.quickassist" name="anATLyzer QuickAssist" schema="schema/anatlyzer.atl.editor.quickassist.exsd"/>
+   <extension-point id="anatlyzer.atl.editor.problemexplanation" name="anATLyzer Explanations" schema="schema/anatlyzer.atl.editor.problemexplanation.exsd"/>
    <extension-point id="anatlyzer.atl.editor.additionalanalysis" name="Additional Analysis" schema="schema/anatlyzer.atl.editor.additionalanalysis.exsd"/>
    <extension-point id="anatlyzer.atl.editor.witnessfinder" name="Witness finder" schema="schema/anatlyzer.atl.editor.witnessfinder.exsd"/>
    <extension-point id="anatlyzer.atl.editor.views.additionalactions" name="Additional actions" schema="schema/anatlyzer.atl.editor.views.additionalactions.exsd"/>
@@ -297,6 +298,12 @@
             class="anatlyzer.atl.commands.CreateATLHOTPiece"
             commandId="anatlyzer.commands.createATLHOTPiece">
       </handler>
+   </extension>
+   <extension
+         point="anatlyzer.atl.editor.views.additionalactions">
+      <viewaction
+            action="anatlyzer.atl.explanations.ShowExplanationDialog">
+      </viewaction>
    </extension>
 
 
