--- a/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
+++ b/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
@@ -399,6 +399,12 @@
           apply="anatlyzer.atl.editor.quickfix.IgnoreProblemQuickfix">
     </quickfix>
  </extension>
+ <extension
+       point="anatlyzer.atl.editor.explanation_fixdialog">
+    <dialog
+          creator="anatlyzer.atl.editor.quickfix.dialog.ExplanationFixComposite">
+    </dialog>
+ </extension>
    	
    
 </plugin>
