--- a/plugins/anatlyzer.atl.editor/plugin.xml
+++ b/plugins/anatlyzer.atl.editor/plugin.xml
@@ -7,6 +7,7 @@
    <extension-point id="anatlyzer.atl.editor.additionalanalysis" name="Additional Analysis" schema="schema/anatlyzer.atl.editor.additionalanalysis.exsd"/>
    <extension-point id="anatlyzer.atl.editor.witnessfinder" name="Witness finder" schema="schema/anatlyzer.atl.editor.witnessfinder.exsd"/>
    <extension-point id="anatlyzer.atl.editor.views.additionalactions" name="Additional actions" schema="schema/anatlyzer.atl.editor.views.additionalactions.exsd"/>
+   <extension-point id="anatlyzer.atl.editor.explanation_fixdialog" name="anATLyzer Fix for the Explanation Dialog " schema="schema/anatlyzer.atl.editor.explanation_fixdialog.exsd"/>
 
    <extension
          id="anatlyzerATLBuilder"
