--- a/plugins/anatlyzer.ocl.emf/plugin.xml
+++ b/plugins/anatlyzer.ocl.emf/plugin.xml
@@ -7,4 +7,34 @@
             provider="anatlyzer.ocl.emf.editor.MetamodelInvariantsExtension">
       </additional>
    </extension>
+   
+   <extension point="org.eclipse.ui.commands">
+      <command
+            categoryId="anatlyzer.commands"
+            id="anatlyzer.commands.genInvariantLibrary"
+            name="Generate invariants as library">
+      </command>
+   </extension>
+   
+   <extension
+         point="org.eclipse.ui.menus">
+   
+         <menuContribution
+            locationURI="popup:anatlyzer.popup.menu?after=additions">
+            <command
+                  commandId="anatlyzer.commands.genInvariantLibrary"
+                  id="anatlyzer.commands.genInvariantLibrary"
+                  mnemonic="L">
+            </command>
+      </menuContribution>
+   </extension>
+   
+   <extension
+         point="org.eclipse.ui.handlers">
+      <handler
+            class="anatlyzer.ocl.commands.GenInvariantLibrary"
+            commandId="anatlyzer.commands.genInvariantLibrary">
+      </handler>
+   </extension>
+   
 </plugin>
