--- a/plugins/anatlyzer.atl.editor/plugin.xml
+++ b/plugins/anatlyzer.atl.editor/plugin.xml
@@ -103,12 +103,13 @@
 
              <menu
                 id="AnATLyzerEditorMenu"
-                label="anATLyzer">
+                label="AnATLyzer">
              <groupMarker
                    name="AnATLyzerGroup">
              </groupMarker>
           </menu>
-	
+
+<!--	
           <action
                 class="anatlyzer.ui.actions.CheckRuleConflicts"
                 definitionId="anatlyzer.ui.commands.CheckRuleConflicts"
@@ -132,7 +133,7 @@
                 label="Clean all markers"
                 menubarPath="AnATLyzerEditorMenu/AnATLyzerGroup">
           </action>
-          
+-->         
 		</editorContribution>
 
    </extension>
@@ -163,7 +164,7 @@
        point="org.eclipse.ui.views">
     <category
           id="anatlyzer.view.category"
-          name="anATLyzer">
+          name="AnATLyzer">
     </category>
     <view
           category="anatlyzer.view.category"
@@ -209,7 +210,7 @@
             objectClass="org.eclipse.core.resources.IFile"
             id="anatlyzer.ui.contribution.showConfigurationDialog">
          <menu
-               label="anATLyzer"
+               label="AnATLyzer"
                path="additions"
                id="anatlyzer.menu">
             <separator
@@ -234,7 +235,7 @@
             locationURI="popup:#TextEditorContext?after=additions">
          <menu
                id="anatlyzer.atl.editor.popup"
-               label="anATLyzer"
+               label="AnATLyzer"
                mnemonic="A">
          </menu>	
       </menuContribution>
@@ -291,7 +292,7 @@
    <extension point="org.eclipse.ui.commands">
       <category
             id="anatlyzer.commands"
-            name="anATLyzer">
+            name="AnATLyzer">
       </category>
       <command
             categoryId="anatlyzer.commands"
@@ -352,7 +353,7 @@
    <extension point="org.eclipse.ui.commands">
       <category
             id="anatlyzer.commands"
-            name="anATLyzer">
+            name="AnATLyzer">
       </category>
       <command
             categoryId="anatlyzer.commands"
