Added quick fix for incoherent return type Improved oclIsKindOf inference, making it work for implies Fixed issue in the use of target element in the source footprint

--- a/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
+++ b/plugins/anatlyzer.atl.editor.quickfix/plugin.xml
@@ -164,6 +164,14 @@
             apply="anatlyzer.atl.editor.quickfix.errors.IncoherentHelperReturnTypeQuickfix_AssignInferredType">
       </quickfix>
    </extension>
+
+   <extension
+         point="anatlyzer.atl.editor.quickfix">
+      <quickfix
+            apply="anatlyzer.atl.editor.quickfix.errors.IncoherentHelperReturnTypeQuickfix_ForceDeclaredReturnType">
+      </quickfix>
+   </extension>
+
    <extension
          point="anatlyzer.atl.editor.quickfix">
       <quickfixset
