Modifications to the build configuration to try to generate proper source builds

--- a/plugins/anatlyzer.atl.editor.quickfix/build.properties
+++ b/plugins/anatlyzer.atl.editor.quickfix/build.properties
@@ -3,4 +3,14 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               icons/
+               icons/,\
+               schema/
+src.includes = src/,\
+               schema/,\
+               plugin.xml,\
+               icons/,\
+               build.properties,\
+               META-INF/,\
+               .project,\
+               .classpath,\
+               .gitignore
