--- a/plugins/anatlyzer.atl.editor/build.properties
+++ b/plugins/anatlyzer.atl.editor/build.properties
@@ -4,4 +4,15 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               schema/
+               schema/,\
+               templates/
+src.includes = templates/,\
+               src/,\
+               schema/,\
+               plugin.xml,\
+               icons/,\
+               META-INF/,\
+               .project,\
+               .classpath,\
+               contexts.xml,\
+               build.properties
