--- a/plugins/anatlyzer.atl.standalone.api/build.properties
+++ b/plugins/anatlyzer.atl.standalone.api/build.properties
@@ -2,3 +2,9 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .
+src.includes = src/,\
+               examples/,\
+               META-INF/,\
+               .project,\
+               .classpath,\
+               build.properties
