--- a/plugins/anatlyzer.atl.typing/build.properties
+++ b/plugins/anatlyzer.atl.typing/build.properties
@@ -9,3 +9,12 @@ jars.compile.order = .
 source.. = src-gen/,\
            src/
 output.. = bin/
+src.includes = src-gen/,\
+               src/,\
+               plugin.xml,\
+               plugin.properties,\
+               model/,\
+               build.properties,\
+               META-INF/,\
+               .project,\
+               .gitignore
