--- a/plugins/anatlyzer.atl.uml/build.properties
+++ b/plugins/anatlyzer.atl.uml/build.properties
@@ -5,3 +5,12 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                model/
+src.includes = src-gen/,\
+               src/,\
+               plugin.xml,\
+               plugin.properties,\
+               model/,\
+               build.properties,\
+               META-INF/,\
+               .project,\
+               .classpath
