--- a/plugins/anatlyzer.atl.editor/plugin.xml
+++ b/plugins/anatlyzer.atl.editor/plugin.xml
@@ -289,7 +289,14 @@
 			schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
 			contextId="org.eclipse.m2m.atl.adt.editor"/>
 	</extension>
-   
+
+   <extension point="org.eclipse.ui.bindings">
+		<key sequence="Ctrl+B"
+			commandId="anatlyzer.commands.showBindingResolutionOutline"
+			schemeId="org.eclipse.ui.defaultAcceleratorConfiguration"
+			contextId="org.eclipse.m2m.atl.adt.editor"/>
+	</extension>
+     
 
    <extension
          point="org.eclipse.ui.menus">
@@ -334,6 +341,12 @@
             name="Show transformation outline">
       </command>
 
+      <command
+            categoryId="anatlyzer.commands"
+            id="anatlyzer.commands.showBindingResolutionOutline"
+            name="Show binding resolution outline">
+      </command>
+
    </extension>
      
    <extension
@@ -356,6 +369,11 @@
       <handler
             class="anatlyzer.atl.commands.ShowTransformationOutline"
             commandId="anatlyzer.commands.showTransformationOutline">
+      </handler>
+      
+      <handler
+            class="anatlyzer.atl.commands.ShowBindingResolutionOutline"
+            commandId="anatlyzer.commands.showBindingResolutionOutline">
       </handler>
       
    </extension>
