Changes in the OCL to ATL

--- a/plugins/anatlyzer.atl.editor/plugin.xml
+++ b/plugins/anatlyzer.atl.editor/plugin.xml
@@ -232,7 +232,10 @@
    <extension
          point="org.eclipse.ui.menus">
       <menuContribution
+      		locationURI="popup:org.eclipse.m2m.atl.adt.editor.AtlEditor.EditorContext?after=additions">
+         <!--
             locationURI="popup:#TextEditorContext?after=additions">
+         -->
          <menu
                id="anatlyzer.atl.editor.popup"
                label="AnATLyzer"
